# osu-rankguess

./: .env.example  .gitignore  README.md  app.py  client flow.txt  community_display.py  community_runtime.py  cron_runtime.py  database.py  ordr_recovery.py  pyproject.toml  render_jobs.py  replay_features.py  seo_oauth_runtime.py  sitecustomize.py  vercel.json
.github/workflows/: apply-final-runtime-fix.yml  apply-full-discord-title.yml  apply-game-fix.yml  checks.yml  default-browser-theme.yml  fix-commit-dates.yml  (+5 more)
model/: MODEL_CARD.md  cb_mae.onnx.parts  cb_rmse.onnx.parts  manifest.json  preprocessing.json  smoke_input.npz  static_mlp.00.part  static_mlp.01.part
public/: app.js  bot-turns.css  bot-turns.js  clean.css  clean.js  community-copy.js  daily-review.js  duel.css  duel.js  final-behavior.js  fixes.css  fixes.js  gallery-infinite.js  gallery-replay-pages.js  game.css  game.js  index.html  infinite-fix.js  layout-redo.js  pipeline-fix.js  playback-fix.js  polish.css  polish.js  popup-dismiss.js  rank-rule.js  refine.css  refine.js  render-recovery.js  replay-page.css  replay-page.js  robots.txt  runtime-final.css  runtime-final.js  seo.js  site.webmanifest  sitemap.xml  styles.css  ui-copy.js
runtime/: bootstrap.py  community.py  cron.py  cron_oidc.py  daily_cron_randomness.py  daily_diversity.py  daily_fresh.py  daily_randomness.py  replay_page.py
scripts/: apply_game_fix.py  devserver.py  test_description_parser.py  verify_model.py
supabase/: gallery_cron.sql
tests/: ui_devserver.py
training/: requirements.txt  train_final_model.py
